--- a/resources/css/news.css
+++ b/resources/css/news.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Geo:ital@0;1&family=Righteous&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Geo:ital@0;1&family=Righteous&display=swap'); */
 
 @import 'news/config.css';
 
