--- a/resources/css/news/article/excerpt.css
+++ b/resources/css/news/article/excerpt.css
@@ -1,6 +1,7 @@
 .ArticleExcerpt {
     display: flex;
     position: relative;
+    height: 100%;
     > * {
         flex: 1 1 100%;
     }
@@ -35,8 +36,12 @@
         z-index: 10;
     }
     &-thumb {
-        margin-left: -2em;
+        margin-left: -10%;
         transition: filter .2s ease-in;
+        &-img {
+            object-fit: cover;
+            aspect-ratio: 1 / 1;
+        }
     }
     &-head {
         flex: 1 1 100%;
