excerpts and anims

--- a/resources/css/news/article/excerpt.css
+++ b/resources/css/news/article/excerpt.css
@@ -33,10 +33,17 @@
         /* @mixin clip-tl-bl; */
         transition: filter .2s ease-in;
         z-index: 10;
+        overflow: hidden;
     }
     &-thumb {
         margin-left: -2em;
         transition: filter .2s ease-in;
+        aspect-ratio: 1 / 1;
+        &-img {
+            object-fit: cover;
+            animation: float 10s ease-in-out alternate infinite;
+            height: 100%;
+        }
     }
     &-head {
         flex: 1 1 100%;
