--- a/resources/css/news/mixins/clip.css
+++ b/resources/css/news/mixins/clip.css
@@ -1,3 +1,6 @@
+@define-mixin clip {
+    clip-path: polygon(0 var(--cut), 0 calc(100% - var(--cut)), var(--cut) 100%, calc(100% - var(--cut)) 100%, 100% calc(100% - var(--cut)), 100% var(--cut), calc(100% - var(--cut)) 0, var(--cut) 0);
+}
 @define-mixin clip-tl {
     clip-path: polygon(0 var(--cut), 0 100%, 100% 100%, 100% 0%, var(--cut) 0);
 }
@@ -10,4 +13,3 @@
 @define-mixin clip-tl-bl {
     clip-path: polygon(0 var(--cut), 0 calc(100% - var(--cut)), var(--cut) 100%, calc(100% - var(--cut)) 100%, 100% calc(100% - var(--cut)), 100% 0%, var(--cut) 0);
 }
-    
