--- a/resources/css/news.css
+++ b/resources/css/news.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Geo:ital@0;1&family=Righteous&display=swap');
 
 @import 'news/config.css';
+@import 'news/animations.css';
 
 @import 'news/mixins/button.css';
 @import 'news/mixins/clip.css';
