--- a/resources/css/news/article/show.css
+++ b/resources/css/news/article/show.css
@@ -45,13 +45,21 @@
         /* flex-wrap: wrap; */
     }
     &-introduction {
+        flex: 1 1 100%;
         font-size: 1.6em;
     }
     &-lead {
+        flex: 1 1 100%;
         display: flex;
         flex-wrap: wrap;
+        --columns: 2;
+        --gap: 1em;
+        gap: var(--gap);
         > * {
-            flex: 0 1 50%;
+            flex: 0 1 calc((100% / var(--columns)) - (var(--gap) * (var(--columns) - 1) / var(--columns)));
+            &:first-child {
+                flex: 0 1 100%;
+            }
         }
     }
     &-thumb {
