--- a/resources/css/news/components/header.css
+++ b/resources/css/news/components/header.css
@@ -3,7 +3,7 @@
     gap: 1em;
     padding: 0.5em;
     align-items: center;
-    background: var(--color-bg);
+    /* background: var(--color-bg); */
     z-index: 30;
 }
 .HeaderLogo {
