--- a/resources/css/news/utilities/media.css
+++ b/resources/css/news/utilities/media.css
@@ -2,7 +2,7 @@
 .media {
     &.-scanlines {
         overflow: hidden;
-        position: relative;
+        /* position: relative; */
         @keyframes scanline {
             0% {
                 transform: translate3d(0, 200000%, 0);
@@ -23,7 +23,7 @@
         &:before {
             width: 100%;
             height: 2px;
-            z-index: 2147483649;
+            /* z-index: 2147483649; */
             background: rgba(0, 0, 0, 0.3);
             opacity: 0.75;
             animation: scanline 6s linear infinite;
@@ -33,7 +33,7 @@
             right: 0;
             bottom: 0;
             left: 0;
-            z-index: 2147483648;
+            /* z-index: 2147483648; */
             background: linear-gradient(
                 to bottom,
                 transparent 50%,
