--- a/resources/css/news/config.css
+++ b/resources/css/news/config.css
@@ -18,8 +18,8 @@
     --color-link: var(--color-active);
 
     --font-size-base: 20px;
-    --font-heading: "Righteous", serif;
-    --font-body: "Geo", serif;
+    --font-heading: "Quantico", serif;
+    --font-body: "Quantico", serif;
 
     --gap: 1em;
     --box-padding: 1em;
