--- a/resources/css/shared.css
+++ b/resources/css/shared.css
@@ -1,3 +1,4 @@
+@import 'shared/config.css';
 @import 'shared/wrapper.css';
 @import 'shared/reset.css';
 @import 'shared/utilities/visibility.css';
