--- a/resources/css/news/foundation.css
+++ b/resources/css/news/foundation.css
@@ -17,9 +17,9 @@ body {
     font-style: normal;
     text-rendering: optimizelegibility; /* Fix the character spacing for headings */
     -webkit-font-smoothing: antialiased;
-
-
-
+}
+p {
+    line-height: 1.3;
 }
 a {
     color: var(--color-active);
@@ -52,6 +52,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.1;
     font-family: var(--font-heading);
     word-break: break-word;
+    font-weight: 600;
     hyphens: auto;
     hyphenate-limit-chars: 10 4 4;
     text-wrap: balance;
