--- a/resources/css/news/utilities/media.css
+++ b/resources/css/news/utilities/media.css
@@ -20,20 +20,18 @@
             content: "";
             position: absolute;
         }
-        &:before {
+        /* &:before {
             width: 100%;
             height: 2px;
-            /* z-index: 2147483649; */
             background: rgba(0, 0, 0, 0.3);
             opacity: 0.75;
             animation: scanline 6s linear infinite;
-        }
+        } */
         &:after {
             top: 0;
             right: 0;
             bottom: 0;
             left: 0;
-            /* z-index: 2147483648; */
             background: linear-gradient(
                 to bottom,
                 transparent 50%,
