--- a/resources/css/news/article/show.css
+++ b/resources/css/news/article/show.css
@@ -69,16 +69,43 @@
         }
     }
     &-sections {
-        > * {
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* gap: var(--gap); */
+        /* > * {
             padding: calc(var(--box-padding) * 2);
-            background: var(--color-subtle);
-        }
+        } */
+        max-width: 80ch;
+        margin: 0 auto;
     }
     &-tldr {
         &-inner {
             font-family: var(--font-heading);
             font-size: 1.2em;
             padding: var(--box-padding);
+        }
+    }
+}
+.ArticleSectionDefault {
+    margin: var(--box-padding);
+    &-inner {
+        display: flex;
+        gap: var(--gap);
+        /* max-width: 80ch;
+        margin: 0 auto; */
+    }
+    &-content {
+        flex: 1 1 auto;
+    }
+    &-media {
+        flex: 0 0 20%;
+    }
+    &:nth-child(odd) & {
+        &-content {
+            order: 2;
+        }
+        &-media {
+            order: 1;
         }
     }
 }
