--- a/resources/css/news/article/lead.css
+++ b/resources/css/news/article/lead.css
@@ -13,6 +13,7 @@
         }
     }
     &-link {
+        display: none;
         position: absolute;
         top: 0;
         left: 0;
@@ -26,6 +27,11 @@
         position: relative;
         margin-right: -4em;
         &:hover & {
+            &-thumb {
+                &-img {
+                    animation-play-state: paused;
+                }
+            }
             &-mini {
                 &-thumb {
                     opacity: 0.3;
@@ -51,7 +57,7 @@
                 object-fit: cover;
                 object-position: 50% 50%;
                 height: 100%;
-                animation: float 10s ease-in-out alternate infinite;
+                animation: float 10s linear infinite;
             }
         }
         &-mini {
@@ -61,20 +67,43 @@
             bottom: -1em;
             left: -1em;
             opacity: 1;
-            width: 80%;
+            width: 60%;
             z-index: 20;
+            &:hover & {
+
+                &-thumb {
+                    transform: translate(0%, 0%) !important;
+                    opacity: 1;
+                    /* opacity: 0.3;
+                    &:nth-child(1) {
+                    }
+                    &:nth-child(2) {
+                        transform: translate(0%, 20%);
+                    }
+                    &:nth-child(3) {
+                        transform: translate(20%, 20%);
+                    } */
+                }
+
+            }
             &-thumb {
                 flex: 1 1 100%;
                 filter: drop-shadow(0 0 1px var(--color-primary));
                 --cut: 2em;
                 aspect-ratio: 1 / 1;
                 transition: all .3s ease;
+                &:hover & {
+                    &-img {
+                        animation-play-state: running;
+                    }
+                }
                 &-img {
                     object-fit: cover;
                     transition: filter .2s ease-in;
                     object-position: 50% 50%;
                     height: 100%;
-                    animation: float 10s ease-in-out alternate infinite;
+                    animation: float 10s linear infinite;
+                    animation-play-state: paused;
                 }
                 &:nth-child(1) {
                     img {
