--- a/resources/css/news/components/header.css
+++ b/resources/css/news/components/header.css
@@ -39,38 +39,37 @@
         flex: 1 1 100%;
         overflow-x: hidden;
     }
-    &-controls {
+    &-lang {
+        flex: 0 0 auto;
         display: flex;
         gap: 0.5em;
-        &-button {
+        &-input {
+            display: none;
+        }
+        &-input:checked + &-label {
+            background: var(--color-active);
+            .Header-lang-label-icon {
+                fill: var(--color-invert);
+            }
+        }
+        &-label {
             display: inline-block;
-            padding: 0.5em;
+            padding: 0.25em;
             background: none;
             border: none;
             transition: background-color .2s ease-in-out;
-            background:
-                linear-gradient(90deg, var(--color-active) 50%, transparent 0) repeat-x,
-                linear-gradient(90deg, var(--color-active) 50%, transparent 0) repeat-x,
-                linear-gradient(0deg, var(--color-active) 50%, transparent 0) repeat-y,
-                linear-gradient(0deg, var(--color-active) 50%, transparent 0) repeat-y;
-            background-size: 8px 2px, 8px 2px, 2px 8px, 2px 8px;
-            background-position: 0 0, 0 100%, 0 0, 100% 0;
-            animation: linearGradientMove 0.5s infinite linear;
+            &:focus,
             &:hover {
                 cursor: pointer;
-                background: var(--color-active);
-            }
-            &:hover & {
-                &-icon {
-                    fill: var(--color-invert);
-                }
+                /* background: var(--color-active); */
+                @mixin dotted-line;
             }
             &-icon {
                 display: inline-block;
                 width: 2em;
                 aspect-ratio: 1 / 1;
                 /* stroke: var(--color-primary); */
-                fill: var(--color-primary);
+                fill: var(--color-active);
             }
         }
     }
