--- a/resources/css/news/article/show.css
+++ b/resources/css/news/article/show.css
@@ -16,40 +16,37 @@
         /* gap: 2em; */
     }
     &-head {
-        padding: var(--box-padding);
-        display: flex;
+        padding: calc(var(--box-padding) * 2);
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(6, auto);
         align-items: center;
         flex-direction: column;
-        gap: 1em;
+        gap: calc(var(--gap) * 2);
         border-bottom: 1px solid var(--color-line);
         width: 100%
     }
+    &-heading {
+        grid-column: 1/7;
+        grid-row: 1/4;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     &-title {
-        font-size: 3em;
-        text-align: left;
+        display: inline-block;
+        font-size: 2.6em;
+        text-align: center;
         max-width: 30ch;
         text-wrap: balance;
-        margin-right: auto;
-        padding: 0 var(--cut);
+        margin: 0 auto;
+        border-top: 1px solid var(--color-line);
+        border-bottom: 1px solid var(--color-line);
     }
-    &-summary {
-        max-width: 40ch;
-        margin-left: auto;
-        text-align: right;
-        font-size: 1.6em;
-    }
-    &-intro {
-        display: flex;
-        gap: 2em;
-        padding: var(--box-padding);
-        /* flex-wrap: wrap; */
-    }
-    &-introduction {
-        flex: 1 1 100%;
-        font-size: 1.6em;
-    }
+
     &-lead {
-        flex: 1 1 100%;
+        grid-column: 7/13;
+        grid-row: 1/6;
         display: flex;
         flex-wrap: wrap;
         --columns: 2;
@@ -62,12 +59,42 @@
             }
         }
     }
+
     &-thumb {
         &-img {
             width: 100%;
             @mixin clip-tl-br;
         }
     }
+    &-mini {
+        grid-column: 1/9;
+        grid-row: 4/7;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: var(--gap);
+
+    }
+
+
+    /* &-summary {
+        max-width: 40ch;
+        margin-left: auto;
+        text-align: right;
+        font-size: 1.6em;
+    } */
+    &-intro {
+        display: flex;
+        gap: 2em;
+        padding: var(--box-padding);
+        /* max-width: 80ch; */
+        margin: 0 auto;
+        /* flex-wrap: wrap; */
+    }
+    &-introduction {
+        flex: 1 1 100%;
+        font-size: 1.6em;
+    }
+    
     &-sections {
         /* display: flex; */
         /* flex-direction: column; */
@@ -75,7 +102,7 @@
         /* > * {
             padding: calc(var(--box-padding) * 2);
         } */
-        max-width: 80ch;
+        /* max-width: 80ch; */
         margin: 0 auto;
     }
     &-tldr {
@@ -96,6 +123,7 @@
     }
     &-content {
         flex: 1 1 auto;
+        max-width: 60ch;
     }
     &-media {
         flex: 0 0 20%;
