--- a/resources/css/news/article/show.css
+++ b/resources/css/news/article/show.css
@@ -7,9 +7,6 @@
         text-transform: uppercase;
         font-family: var(--font-heading);
     }
-
-
-
     &-main {
         display: flex;
         flex-direction: column;
@@ -47,7 +44,6 @@
         backdrop-filter: blur(10px);
         padding: 0.5em;
     }
-
     &-lead {
         grid-column: 1/13;
         grid-row: 1/6;
@@ -63,15 +59,12 @@
                 object-fit: cover;
             }
         }
-        > * {
-
-        }
     }
-
     &-thumb {
         &-img {
+            filter: drop-shadow(0 0 1px var(--color-primary));
             width: 100%;
-            --cut: 1em;
+            --cut: 2em;
             @mixin clip-tl-br;
         }
     }
@@ -79,39 +72,37 @@
         grid-column: 1/10;
         grid-row: 4/7;
         display: flex;
-        /* grid-template-columns: repeat(4, 1fr); */
         gap: var(--gap);
         > * {
             object-fit: cover;
             flex: 1 1 auto;
-            /* height: 100%;
-            > * {
-                height: 100%;
-            } */
         }
-
     }
-
-
-    /* &-summary {
-        max-width: 40ch;
-        margin-left: auto;
-        text-align: right;
-        font-size: 1.6em;
-    } */
     &-intro {
-        display: flex;
-        gap: 2em;
-        padding: var(--box-padding);
-        /* max-width: 80ch; */
-        margin: 0 auto;
-        /* flex-wrap: wrap; */
-    }
-    &-introduction {
-        flex: 1 1 100%;
+        display: grid;
+        /* gap: 2em; */
+        /* align-items: center; */
         font-size: 1.6em;
+        grid-template-columns: 1fr var(--content-width) 1fr;
+        > * {
+            flex: 1 1 auto;
+        }
+        &-icon {
+            grid-column: 1;
+            flex: 0 0 auto;
+            fill: var(--color-line);
+            width: 100px;
+            height: 100px;
+            padding: var(--box-padding);
+            margin-left: auto;
+        }
+        &-inner {
+            grid-column: 2;
+            /* padding: var(--box-padding); */
+            /* max-width: var(--content-width); */
+            margin: 0 auto;
+        }
     }
-
     &-sections {
         /* display: flex; */
         /* flex-direction: column; */
@@ -135,22 +126,38 @@
     &-inner {
         display: grid;
         gap: var(--gap);
-        max-width: 80ch;
-        margin: 0 auto;
+        /* margin: 0 auto; */
+        grid-template-columns: 1fr var(--content-width) 1fr;
+        grid-template-rows: 1fr;
     }
     &-content {
-        flex: 1 1 auto;
-
-        /* max-width: 60ch; */
+        /* max-width: 80ch; */
+        /* grid-column: 2; */
     }
     &-media {
-        flex: 0 0 20%;
+        /* grid-column: 1; */
+        display: flex;
+        gap: var(--gap);
+        flex-wrap: wrap;
+        /* flex-direction: column; */
+        &-img {
+            @mixin clip-tl-br;
+            filter: drop-shadow(0 0 1px var(--color-primary));
+        }
+    }
+    &-icon {
+        /* grid-column: 3; */
+        fill: var(--color-line);
+        width: 100%;
     }
     &:nth-child(odd) & {
+        &-media {
+            order: 3;
+        }
         &-content {
             order: 2;
         }
-        &-media {
+        &-icon {
             order: 1;
         }
     }
