--- a/resources/css/news/layouts/layout.css
+++ b/resources/css/news/layouts/layout.css
@@ -11,14 +11,19 @@
         padding: var(--gap) 0;
     }
     &-main {
-        display: flex;
+        display: grid;
+        grid-template-columns: var(--sidebar-width) auto var(--aside-width);
+        grid-template-rows: auto auto auto;
     }
     &-sidebar {
-        flex: 0 0 var(--sidebar-width);
-        max-width: var(--sidebar-width);
+        grid-column: 1;
+        &-inner {
+            position: sticky; 
+            top: 0;
+        }
     }
     &-center {
-        flex: 1 1 50%;
+        grid-column: 2;
         min-height: var(--cut-lg);
         position: relative;
         border-right: 1px solid var(--color-line);
@@ -50,10 +55,45 @@
         }
     }
     &-aside {
-        flex: 0 0 var(--aside-width);
+        grid-column: 3;
     }
     &-sticky {
         position: sticky;
         top: 0;
+    }
+    @media screen and (max-width: 1640px) {
+        &-main {
+            grid-template-columns: var(--sidebar-width) auto;
+            grid-column: 1/3;
+        }
+        &-aside {
+            grid-column: 1/3;
+            grid-row: 2
+        }
+    }
+    @media screen and (max-width: 1024px) {
+        &-main {
+            grid-template-columns: auto;
+            grid-column: 1;
+        }
+        &-sidebar {
+            grid-column: 1/3;
+            grid-row: 2;
+            &-inner {
+                display: flex;
+                flex-wrap: wrap;
+                > * {
+                    flex: 1 1 33%;
+                }
+            }
+        }
+        &-content {
+            grid-column: 1/3;
+            grid-row: 1;
+        }
+        &-aside {
+            grid-column: 1/3;
+            grid-row: 3;
+        }
     }
 }
