--- a/resources/css/news/article/show.css
+++ b/resources/css/news/article/show.css
@@ -47,6 +47,10 @@
         border-bottom: 1px solid var(--color-line);
         width: 100%
     }
+    &-title1 {
+        padding-left: calc(var(--sidebar-width) + var(--cut));
+        font-size: 3rem;
+    }
     &-heading {
         grid-column: 1/7;
         grid-row: 1/4;
@@ -56,7 +60,7 @@
     }
     &-title {
         display: inline-block;
-        font-size: 2.6em;
+        font-size: 1.6em;
         text-align: center;
         max-width: 30ch;
         text-wrap: balance;
