--- a/resources/css/news/layouts/layout.css
+++ b/resources/css/news/layouts/layout.css
@@ -18,11 +18,33 @@
     &-sidebar {
         grid-column: 1;
         &-inner {
-            position: sticky; 
+            position: sticky;
             top: 0;
         }
     }
     &-center {
+
+        @keyframes line-left {
+            0% {
+                height: 0;
+            }
+            100% {
+                height: calc(100% - var(--cut-lg) - 2px);
+            }
+        }
+
+        @keyframes line-cut {
+            0% {
+                height: 0;
+                width: 0;
+            }
+            100% {
+                height: var(--cut-lg);
+                width: 100%;
+            }
+        }
+
+
         grid-column: 2;
         min-height: var(--cut-lg);
         position: relative;
@@ -43,12 +65,14 @@
             height: var(--cut-lg);
             top: 0;
             border: 1px solid var(--color-line);
-            border-width: 1px 1px 0px 2px;
+            border-width: 1px 0px 0px 2px;
             transform: skew(-45deg);
             transform-origin: right bottom;
+            animation: line-cut 1s ease 1 forwards;
         }
         &:after {
-            height: calc(100% - var(--cut-lg) - 2px);
+            /* height: calc(100% - var(--cut-lg) - 2px); */
+            animation: line-left 1s ease 1 forwards;
             bottom: 0px;
             border: 1px solid var(--color-line);
             border-width: 0px 0px 1px 1px;
