--- a/resources/css/news/article/excerpt.css
+++ b/resources/css/news/article/excerpt.css
@@ -2,6 +2,11 @@
     display: flex;
     position: relative;
     width: 100%;
+
+    @container (max-width: 640px)
+    {
+        flex-direction: column;
+    }
     > * {
         flex: 1 1 100%;
     }
